--- a/coincheCounter/app/src/main/res/values/strings.xml
+++ b/coincheCounter/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">coincheCounter</string>
     <string name="title_main">Counter</string>
     <string name="add_button">add</string>
+    <string name="scoreDisplay">Score de la manche : %1$d , score de la partie: %2$d .</string>
 </resources>
