--- a/coincheCounter/app/src/main/res/values/strings.xml
+++ b/coincheCounter/app/src/main/res/values/strings.xml
@@ -2,5 +2,8 @@
     <string name="app_name">coincheCounter</string>
     <string name="title_main">Counter</string>
     <string name="add_button">add</string>
-    <string name="scoreDisplay">Score de la manche : %1$d , score de la partie: %2$d .</string>
+    <string name="scoreDisplay">Score de la manche : %1$d \n score de la partie: %2$d .</string>
+    <string name="form_score_team1">Score Team 1</string>
+    <string name="form_score_team2">Score Team 2</string>
+    <string name="add_score">Ajouter les scores</string>
 </resources>
